tools/shook/src/snapshots/shook__config__tests__test_invalid_config-null.snap
---
source: src/config.rs
expression: config
---
x TOML parse error at line 1, column 1
│   |
│ 1 |
│   | ^
│ missing field `devop`
│
